...
    Column(modifier = modifier) {

        Spacer(modifier = Modifier.height(32.dp))

        Text(
            modifier = Modifier
                .testTag("decimal_display")
                .padding(8.dp)
                .fillMaxWidth()
                .clickable { intentHandler(RomanUiIntent.ShowBottomSheet) },
            text = uiState.decimal.toString(),
            color = textColor,
            textAlign = TextAlign.Center,
...
        Spacer(modifier = Modifier.height(64.dp))

        Text(
            text = uiState.romanText,
            color = textColor,
            textAlign = TextAlign.Center,
            modifier = Modifier.padding(8.dp).fillMaxWidth().testTag("roman_numeral"),
            fontFamily = FontFamily.Serif,
            style = MaterialTheme.typography.displayLarge,
        )

        if (uiState.showBottomSheet) {
            DecimalSelectorBottomSheet(
...
